<resources>
    <string name="app_name">Kemitor</string>

    // AdMob Unit ID
    <string name="banner_ad_unit_id_main_screen">ca-app-pub-3940256099942544/6300978111</string>
    <string name="banner_ad_unit_id_profiles_screen">ca-app-pub-3940256099942544/6300978111</string>
    <string name="banner_ad_unit_id_apps_list_screen">ca-app-pub-3940256099942544/6300978111</string>

    <string name="enter_app">Enter App?</string>
    <string name="sure_enter_app_description">You are about to launch app, %1$s!</string>
    <string name="enter_button">Enter</string>
    <string name="snooze_button">Snooze</string>s
    <string name="quit_button">Quit</string>
    <string name="app_icon">Package icon</string>
    <string name="action_settings">Settings</string>
    <string name="user_name">Hello, Kemitor</string>
    <string name="start_button">Start service</string>
    <string name="end_button">End service</string>
    <string name="permission_button">Check permissions</string>
    <string name="draw_over_other_apps">System overlay permissions</string>
    <string name="select_apps">Select Apps</string>
    <string name="save_settings">Save</string>
    <string name="profile_name">Profile Name</string>
    <string name="add_new_profile">Add a new profile</string>
    <string name="ok_text">OK</string>
    <string name="cancel_text">Cancel</string>
    <string name="profiles">Profiles</string>
    <string name="edit_profile_settings">Edit Profile Settings</string>
    <string name="block_strictness">Block strictness:\u0020</string>
    <string name="block_strictness_level">Some level</string>
    <string name="profile_start_time_label">Start Time:</string>
    <string name="profile_end_time_label">End Time:</string>
    <string name="days_to_repeat">Days to Repeat:</string>

    <string name="strictness_level_1">Level 1</string>
    <string name="strictness_level_2">Level 2</string>
    <string name="strictness_level_3">Level 3</string>
    <string name="strictness_level_4">Level 4</string>
    <string-array name="strictness_level">
        <item>@string/strictness_level_1</item>
        <item>@string/strictness_level_2</item>
        <item>@string/strictness_level_3</item>
        <item>@string/strictness_level_4</item>
    </string-array>

    <string name="strictness_level_description_1">Snooze blocking unlimited number of times</string>
    <string name="strictness_level_description_2">Type in a meaningful sentence to unblock</string>
    <string name="strictness_level_description_3">Type in a long meaningless sentence to unblock</string>
    <string name="strictness_level_description_4">Block every attempt no matter what</string>
    <string-array name="strictness_level_description">
        <item>@string/strictness_level_description_1</item>
        <item>@string/strictness_level_description_2</item>
        <item>@string/strictness_level_description_3</item>
        <item>@string/strictness_level_description_4</item>
    </string-array>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Dialog strings -->
    <string name="dialog_enter_sentence">Type in the following sentence to unlock snooze:</string>
    <string name="mismatch">Mismatch</string>
    <string name="match">Match</string>

    <!-- Day of the week -->
    <string name="sunday_acc">S</string>
    <string name="monday_acc">M</string>
    <string name="tuesday_acc">T</string>
    <string name="wednesday_acc">W</string>
    <string name="thursday_acc">T</string>
    <string name="friday_acc">F</string>
    <string name="saturday_acc">S</string>

    <string-array name="days_of_the_week">
        <item>@string/sunday_acc</item>
        <item>@string/monday_acc</item>
        <item>@string/tuesday_acc</item>
        <item>@string/wednesday_acc</item>
        <item>@string/thursday_acc</item>
        <item>@string/friday_acc</item>
        <item>@string/saturday_acc</item>
    </string-array>

    <string name="applications">Applications:</string>
    <string name="select">Select</string>
</resources>
