<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content_main2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.karums1.kemitor.presentation.activities.MainActivity"
    tools:showIn="@layout/app_bar_main2">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/userName"
        android:text="@string/user_name" />

    <Button
        android:text="@string/start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/userName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/startButton" />

    <Button
        android:text="@string/end_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/startButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/endButton" />

    <Button
        android:text="@string/permission_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/endButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/permissionButton" />

    <Button
        android:text="@string/draw_over_other_apps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/permissionButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/drawOverOtherAppsButton" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adViewMainScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        app:adUnitId="@string/banner_ad_unit_id_main_screen">
    </com.google.android.gms.ads.AdView>

</RelativeLayout>
